--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
  "dependencies": {
       "fs": "^0.0.1-security",
     "fs-extra": "^11.1.1",
-   "axios": "^1.4.0"
+   "axios": "^1.4.0",
+   "express": "^4.18.2",
+  "path": "^0.12.7"
  }
 }
